# WorkTracer

./: CMakeLists.txt  README.md
cfg/: config.yaml
headers/: IAIengine.hpp  IActivityWatcher.hpp  IScreenshot.hpp  ITextParser.hpp
src/: ActivityWatcher.cpp  ActivityWatcher.hpp  ConfigManager.hpp  IScreenshot.hpp  ITextParser.hpp  ScreenshotService.cpp  ScreenshotService.hpp  TesseractTextParser.cpp  TesseractTextParser.hpp  X11Screenshot.cpp  X11Screenshot.hpp  config.yaml  main.cpp
src/ActivityWatcher/: KWinActivityWatcher.cpp  KWinActivityWatcher.hpp  MutterActivityWatcher.cpp  MutterActivityWatcher.hpp  X11ActivityWatcher.cpp  X11ActivityWatcher.hpp
src/Common/: Utilities.cpp  Utilities.hpp
src/ReportMaker/: YandexGPT.cpp  YandexGPT.hpp
src/Screenshot/: KWinScreenshot.cpp  KWinScreenshot.hpp  MutterScreenshot.cpp  MutterScreenshot.hpp  X11Screenshot.cpp  X11Screenshot.hpp
src/TextParser/: TesseractTextParser.cpp  TesseractTextParser.hpp
